# basic-rl-prover

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.rst  local-build.sh  mypy.ini  pyproject.toml  pytest.ini  spelling.dict
aitp2022-paper/: aitp2022.bib  aitp2022.tex
aitp2022-talk/: Prototype.drawio  RLSquint.drawio  SaturationProver.drawio  talk.tex
basic_rl_prover/: __init__.py  action_selection_model.py  ast2vec_environment.py  baseline.py  conftest.py  constants.py  custom_callbacks.py  custom_dqn.py  custom_dqn_policy.py  custom_dqn_torch_policy.py  custom_dqn_trainer.py  custom_environment.py  custom_features.py  custom_replay_buffer.py  size_age_environment.py  test_prover.py  train_prover.py
basic_rl_prover/resources/: problems-statistics.csv  problems-statistics.jsonlines  train-problems.txt
basic_rl_prover/resources/TPTP-mock/Problems/TST/: TST001-1.p
basic_rl_prover/resources/residuated_binars/Axioms/: RBI001-0.ax
basic_rl_prover/resources/residuated_binars/Problems/RBI/: RBI002-1.p  RBI003-1.p  RBI006-1.p
doc/source/: conf.py  index.rst  package-documentation.rst
residuted_binars/Problems/RBI/: RBI001-1.p  RBI002-1.p  RBI003-1.p  RBI004-1.p  RBI005-1.p
scripts/: compute_statistics.py  filter_train_problems.py  reproduce.py  run_vampire.py
