[tool.poetry]
name = "basic-rl-prover"
version = "0.0.1"
description = ""
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">= 3.7.1, < 3.11"
ray = {version = "*", extras = ["rllib"]}
torch = "*"
gym-saturation = "*"

# [tool.poetry.dev-dependencies]
# black = "*"
# flake8 = "*"
# pylint = "*"
# pytest-coverage = "*"
# mypy = "*"
# tensorboard = "*"
# importlib-metadata = "*"
# pre-commit = "*"
# sphinx-rtd-theme = "*"
tptp-lark-parser = "*"

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "*"
pytest-coverage = "*"
mypy = "*"
pylint = "*"
pre-commit = "*"
black = "*"
pydocstyle = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["basic_rl_prover"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --cov basic_rl_prover --cov-report term-missing --cov-report xml --cov-fail-under=98 --junit-xml test-results/basic-rl-prover.xml"
testpaths = ["basic_rl_prover"]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.pylint.master]
disable = "bad-continuation"

[tool.pylint.format]
max-line-length = 79
ignore-long-lines = "(this_is_a_test_case|https://)"

[tool.pylint.design]
max-statements = 10

[tool.pylint.typecheck]
generated-members = ["orjson", "torch"]

[tool.mypy]
show_error_codes = true
incremental = true
disable_error_code = "no-redef"

[[tool.mypy.overrides]]
module = ["gym.*"]
ignore_missing_imports = true
