[tool.poetry]
name = "basic-rl-prover"
version = "0.0.1"
description = ""
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "> 3.8, < 3.11"
ray = {version = "*", extras = ["rllib"]}
torch = "*"
gym-saturation = "*"
numpy = "<1.24.0"  # https://github.com/ray-project/ray/issues/31246

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "*"
pytest-coverage = "*"
mypy = "*"
pylint = "*"
pre-commit = "*"
black = "*"
pydocstyle = "*"
pyenchant = "*"
tqdm = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["basic_rl_prover"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --cov basic_rl_prover --cov-report term-missing --cov-report xml --cov-fail-under=80 --junit-xml test-results/basic-rl-prover.xml"
testpaths = ["basic_rl_prover"]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.pylint.format]
max-line-length = 79
ignore-long-lines = "(this_is_a_test_case|https://)"

[tool.pylint.design]
max-statements = 10

[tool.pylint.typecheck]
generated-members = ["orjson", "torch"]

[tool.pylint.spelling]
spelling-dict = "en_GB"
spelling-private-dict-file = "spelling.dict"

[tool.mypy]
show_error_codes = true
incremental = true
disable_error_code = "no-redef"

[[tool.mypy.overrides]]
module = ["gym.*", "tqdm.*"]
ignore_missing_imports = true
